--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -70,15 +70,15 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: sa2878/event_manager:${{ github.sha }} # Uses the Git SHA for tagging
+          tags: syedahmad2878/event_manager:${{ github.sha }} # Uses the Git SHA for tagging
           platforms: linux/amd64,linux/arm64 # Multi-platform support
-          cache-from: type=registry,ref=sa2878/event_manager:cache
+          cache-from: type=registry,ref=syedahmad2878/event_manager:cache
           cache-to: type=inline,mode=max
           
       - name: Scan the Docker image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'sa2878/event_manager:${{ github.sha }}'
+          image-ref: 'syedahmad2878/event_manager:${{ github.sha }}'
           format: 'table'
           exit-code: '1' # Fail the job if vulnerabilities are found
           ignore-unfixed: true
